# snnpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
snnpy/: .gitignore  old_snn.py  old_snn_1.py  setup.cfg  snn.py
snnpy/snnpy/: _LICENSE
